ThirdPartyLibraries/packages/nuget.org/system.text.json/8.0.0/readme.md
System.Text.Json [8.0.0](https://www.nuget.org/packages/System.Text.Json/8.0.0)
--------------------

Used by: ThirdPartyLibraries

Target frameworks: net6.0, net7.0, net8.0, netstandard2.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/dotnet/runtime) 
- project license: [Unknown](https://dot.net/) 

Description
-----------
Provides high-performance and low-allocating types that serialize objects to JavaScript Object Notation (JSON) text and deserialize JSON text to objects, with UTF-8 support built-in. Also provides types to read and write JSON text encoded as UTF-8, and to create an in-memory document object model (DOM), that is read-only, for random access of the JSON elements within a structured view of the data.

The System.Text.Json library is built-in as part of the shared framework in .NET Runtime. The package can be installed when you need to use it in other target frameworks.

Remarks
-----------
no remarks


Dependencies 2
-----------

|Name|Version|
|----------|:----|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/6.0.0)|6.0.0|
|[System.Text.Encodings.Web](../../../../packages/nuget.org/system.text.encodings.web/8.0.0)|8.0.0|

*This page was generated by a tool.*