ThirdPartyLibraries/packages/nuget.org/system.text.json/9.0.1/readme.md
System.Text.Json [9.0.1](https://www.nuget.org/packages/System.Text.Json/9.0.1)
--------------------

Used by: ThirdPartyLibraries

Target frameworks: net8.0, net9.0, netstandard2.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/dotnet/runtime) 
- project license: [Unknown](https://dot.net/) 

Description
-----------
Provides high-performance and low-allocating types that serialize objects to JavaScript Object Notation (JSON) text and deserialize JSON text to objects, with UTF-8 support built-in. Also provides types to read and write JSON text encoded as UTF-8, and to create an in-memory document object model (DOM), that is read-only, for random access of the JSON elements within a structured view of the data.

The System.Text.Json library is built-in as part of the shared framework in .NET Runtime. The package can be installed when you need to use it in other target frameworks.

Remarks
-----------
no remarks


Dependencies 7
-----------

|Name|Version|
|----------|:----|
|[Microsoft.Bcl.AsyncInterfaces](../../../../packages/nuget.org/microsoft.bcl.asyncinterfaces/9.0.1)|9.0.1|
|[System.Buffers](../../../../packages/nuget.org/system.buffers/4.6.0)|4.6.0|
|[System.IO.Pipelines](../../../../packages/nuget.org/system.io.pipelines/9.0.1)|9.0.1|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.6.0)|4.6.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/6.1.0)|6.1.0|
|[System.Text.Encodings.Web](../../../../packages/nuget.org/system.text.encodings.web/9.0.1)|9.0.1|
|[System.Threading.Tasks.Extensions](../../../../packages/nuget.org/system.threading.tasks.extensions/4.5.4)|4.5.4|

*This page was generated by a tool.*